links added (final 3)

--- a/creators.html
+++ b/creators.html
@@ -36,9 +36,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -74,11 +77,11 @@
 
 
     <section class="my-5 d-flex justify-content-center">
-        
+
         <div id="carouselExampleIndicators" class="carousel slide">
             <div class="navs carousel-indicators d-flex justify-content-center ">
-                <button  type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active m-0"
-                    aria-current="true" aria-label="Slide 1">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                    class="active m-0" aria-current="true" aria-label="Slide 1">
                     <h6 class="font-bold text-center m-0  px-3 py-1">Gaming Creators</h6>
                 </button>
                 <button class="m-0" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
