--- a/ec.html
+++ b/ec.html
@@ -38,9 +38,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -91,7 +94,8 @@
                     into
                     <br> India's growing gaming appeal, connecting brands with gaming enthusiasts.
                 </p>
-                <button class="get-it bg-black text-white py-2 px-3" style="transform: translateY(4rem);">Get in Touch </button>
+                <button class="get-it bg-black text-white py-2 px-3" style="transform: translateY(4rem);">Get in Touch
+                </button>
                 <!-- </div> -->
             </div>
         </section>
