--- a/es.html
+++ b/es.html
@@ -38,9 +38,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -87,7 +90,8 @@
                     <h1 class="f-oswald fw-big m-0 text-black">EXO &nbsp;</h1>
                     <h1 class="f-oswald fw-big m-0 orange"> SERVER</h1>
                 </div>
-                <p class="text-black text-center fw-bold f-opensans">Exo Server is an innovative video games operating servers.
+                <p class="text-black text-center fw-bold f-opensans">Exo Server is an innovative video games operating
+                    servers.
                     Currently,
                     we operate
                     Exo
