--- a/index.html
+++ b/index.html
@@ -47,9 +47,12 @@
               PORTFOLIO
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+              <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+              <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+              <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+              <li><a class="dropdown-item" href="team.html">Team</a></li>
+              <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
             </ul>
           </li>
           <li class="nav-item">
@@ -92,7 +95,8 @@
           <h1 class="fw-bold text-black">Home of India's<br>Gaming Talents</h1>
           <div class="buttons d-flex gap-0">
             <button id="scrollButton" class="portfolio fw-bold bg-orange py-2 px-3">Ecosystem</button>
-            <button class="get-in-touch fw-bold text-white bg-black py-2 px-3"><a href="contactus.html" class="text-white">Get in
+            <button class="get-in-touch fw-bold text-white bg-black py-2 px-3"><a href="contactus.html"
+                class="text-white">Get in
                 Touch</a></button>
           </div>
         </div>
@@ -393,7 +397,8 @@
         </div>
         <div class="partner-invite d-flex flex-column gap-3">
           <h5 class="f-oswald d-flex justify-content-center">Become a Creators</h5>
-          <button class="bg-orange text-black px-3 py-2 fw-bold d-flex align-items-center gap-1"><a href="contactus.html" class="text-black">GET IN TOUCH
+          <button class="bg-orange text-black px-3 py-2 fw-bold d-flex align-items-center gap-1"><a
+              href="contactus.html" class="text-black">GET IN TOUCH
               <img src="./public/doubleArrow.svg" alt="">
             </a>
           </button>
@@ -405,10 +410,10 @@
 
         </div>
         <p class="text-black fw-medium text-center f-inter">&nbsp;&nbsp;&nbsp;&nbsp;<b>My journey began as an esports
-          player, but Thug knew that it wasn't viable career option in India at
-          that time. So I started my youtube journey, with a bunch of people I consider as family. We together
-          have experienced the highest of highs and lowest of lows, but what matters is that we stuck together
-          and aspire to grow TOGETHER.</b>
+            player, but Thug knew that it wasn't viable career option in India at
+            that time. So I started my youtube journey, with a bunch of people I consider as family. We together
+            have experienced the highest of highs and lowest of lows, but what matters is that we stuck together
+            and aspire to grow TOGETHER.</b>
         </p>
         <!-- <div> -->
         <p class="text-center f-inter">Paniked (Ayush Rai) <br>
