--- a/contactus.html
+++ b/contactus.html
@@ -38,9 +38,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -163,7 +166,10 @@
                 <h1 class="f-oswald fw-big m-0 orange"> US</h1>
             </div>
             <!-- <img class="w-100" src="./public/map.png" alt=""> -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14008.963370079375!2d77.12665470603955!3d28.622542996260016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0331c5debda9%3A0xb086f436fa3bc42d!2sNaraina%20Village%2C%20Naraina%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1702049472906!5m2!1sen!2sin" width="100%" height="360" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14008.963370079375!2d77.12665470603955!3d28.622542996260016!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d0331c5debda9%3A0xb086f436fa3bc42d!2sNaraina%20Village%2C%20Naraina%2C%20New%20Delhi%2C%20Delhi!5e0!3m2!1sen!2sin!4v1702049472906!5m2!1sen!2sin"
+                width="100%" height="360" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
 
