--- a/eg.html
+++ b/eg.html
@@ -38,9 +38,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
@@ -84,8 +87,7 @@
 
 
         <!-- <section class="eg"> -->
-        <section
-            class="heading d-flex justify-content-center align-items-center w-100 mt-2 mb-5">
+        <section class="heading d-flex justify-content-center align-items-center w-100 mt-2 mb-5">
             <div class="text-white ">
                 <!-- <img class="position-absolute " src="./public/headphones.png" alt="" width="100%" style="z-index: -1;"> -->
                 <!-- <div> -->
