--- a/team2.html
+++ b/team2.html
@@ -28,7 +28,8 @@
                 aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap" width="90px"></a>
+            <a class="navbar-brand m-0" href="index.html"><img src="./public/link@2x.png" alt="Bootstrap"
+                    width="90px"></a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
@@ -37,9 +38,12 @@
                             PORTFOLIO
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="ec.html">Executor Creatives</a></li>
+                            <li><a class="dropdown-item" href="eg.html">Executor Gaming</a></li>
+                            <li><a class="dropdown-item" href="es.html">Exo Server</a></li>
+                            <li><a class="dropdown-item" href="news2.html">News 2</a></li>
+                            <li><a class="dropdown-item" href="team.html">Team</a></li>
+                            <li><a class="dropdown-item" href="team2.html">Team 2</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
