headings fat and thick !! (final 3)

--- a/news2.html
+++ b/news2.html
@@ -50,7 +50,7 @@
                         <a class="nav-link" aria-current="page" href="aboutus.html">ABOUT</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="news.html">NEWSROOM</a>
+                        <a class="nav-link" href="news.html">NEWSROOM</Fea>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="creators.html">OUR CREATORS</a>
@@ -106,8 +106,8 @@
                 <h6 class="text-center m-0">NEWS ERA</h6>
                 <!-- <h1 class="f-oswald">GAMING & </h1><h1 class="f-oswald orange">ESPORTS</h1> -->
                 <div class="d-flex flex-wrap g-e justify-content-center  m-auto">
-                    <h1 class="f-oswald">GAMING &&nbsp</h1>
-                    <h1 class="f-oswald orange"> ESPORTS</h1>
+                    <h1 class="f-oswald fw-big extra-bold">GAMING &&nbsp;</h1>
+                    <h1 class="f-oswald fw-big extra-bold orange"> ESPORTS</h1>
                 </div>
                 <p class="text-center">One stop for all the latest esports & gaming action.</p>
             </div>
