--- a/contactus.html
+++ b/contactus.html
@@ -87,7 +87,7 @@
 
 
         <section class="contact-us w-100 d-flex flex-column align-items-center my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
-            <h1 class="text-black  fw-big f-oswald text-center">CONTACT US</h1>
+            <h1 class="text-black  fw-big extra-bold f-oswald text-center">CONTACT US</h1>
             <div class="d-flex flex-wrap  mx-2 justify-content-between align-items-start">
                 <div class="get-in-touch mx-2  d-flex flex-column justify-content-center">
                     <h4 class="text-black fw-bold f-oswald mb-3">Get In Touch</h4>
@@ -162,8 +162,8 @@
         </section>
         <section class="find-us my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div class="d-flex my-5 justify-content-center">
-                <h1 class="f-oswald fw-big m-0 text-black">FIND &nbsp;</h1>
-                <h1 class="f-oswald fw-big m-0 orange"> US</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 text-black">FIND &nbsp;</h1>
+                <h1 class="f-oswald fw-big extra-bold m-0 orange"> US</h1>
             </div>
             <!-- <img class="w-100" src="./public/map.png" alt=""> -->
             <iframe
