--- a/es.html
+++ b/es.html
@@ -87,8 +87,8 @@
         <section class="exo-server my-5 my-sm-3 my-md-4 my-lg-5 my-xl-5">
             <div>
                 <div class="d-flex mb-1 justify-content-center ">
-                    <h1 class="f-oswald fw-big m-0 text-black">EXO &nbsp;</h1>
-                    <h1 class="f-oswald fw-big m-0 orange"> SERVER</h1>
+                    <h1 class="f-oswald fw-big extra-bold m-0 text-black">EXO &nbsp;</h1>
+                    <h1 class="f-oswald fw-big extra-bold m-0 orange"> SERVER</h1>
                 </div>
                 <p class="text-black text-center fw-bold f-opensans">Exo Server is an innovative video games operating
                     servers.
